Fix counting of complexities